norminette/tests/rules/test_file_210923.out
Missing or invalid header. Header are being reintroduced as a mandatory part of your files. This is not yet an error.
[36mtest_file_210923.c[0m - [32mIsFuncDeclaration[0m In "GlobalScope" from "None" line 1":
		<INT> <TAB> <IDENTIFIER=main> <LPARENTHESIS> <VOID> <RPARENTHESIS> <NEWLINE>
[36mtest_file_210923.c[0m - [32mIsBlockStart[0m In "Function" from "GlobalScope" line 2":
		<LBRACE> <NEWLINE>
[36mtest_file_210923.c[0m - [32mIsVarDeclaration[0m In "Function" from "GlobalScope" line 3":
		<TAB> <INT> <TAB> <TAB> <IDENTIFIER=a> <SEMI_COLON> <NEWLINE>
[36mtest_file_210923.c[0m - [32mIsVarDeclaration[0m In "Function" from "GlobalScope" line 4":
		<TAB> <INT> <TAB> <TAB> <IDENTIFIER=b> <SEMI_COLON> <NEWLINE>
[36mtest_file_210923.c[0m - [32mIsEmptyLine[0m In "Function" from "GlobalScope" line 5":
		<NEWLINE>
[36mtest_file_210923.c[0m - [32mIsAssignation[0m In "Function" from "GlobalScope" line 6":
		<TAB> <LPARENTHESIS> <IDENTIFIER=a> <SPACE> <ASSIGN> <SPACE> <CONSTANT=4> <RPARENTHESIS> <SPACE> <AND> <SPACE> 
[36mtest_file_210923.c[0m - [32mIsAssignation[0m In "Function" from "GlobalScope" line 6":
		<LPARENTHESIS> <IDENTIFIER=b> <SPACE> <ASSIGN> <SPACE> <CONSTANT=6> <RPARENTHESIS> <SEMI_COLON> <NEWLINE>
[36mtest_file_210923.c[0m - [32mIsBlockEnd[0m In "Function" from "GlobalScope" line 7":
		<RBRACE> <NEWLINE>
[36mtest_file_210923.c[0m - [32mIsEmptyLine[0m In "GlobalScope" from "None" line 8":
		<NEWLINE>
[36mtest_file_210923.c[0m - [32mIsPreprocessorStatement[0m In "GlobalScope" from "None" line 9":
		<INCLUDE=#include <stdio.h>> <NEWLINE>
[36mtest_file_210923.c[0m - [32mIsEmptyLine[0m In "GlobalScope" from "None" line 10":
		<NEWLINE>
[36mtest_file_210923.c[0m - [32mIsFuncDeclaration[0m In "GlobalScope" from "None" line 11":
		<INT> <TAB> <IDENTIFIER=main> <LPARENTHESIS> <VOID> <RPARENTHESIS> <NEWLINE>
[36mtest_file_210923.c[0m - [32mIsBlockStart[0m In "Function" from "GlobalScope" line 12":
		<LBRACE> <NEWLINE>
[36mtest_file_210923.c[0m - [32mIsVarDeclaration[0m In "Function" from "GlobalScope" line 13":
		<TAB> <INT> <TAB> <IDENTIFIER=a> <SEMI_COLON> <NEWLINE>
[36mtest_file_210923.c[0m - [32mIsEmptyLine[0m In "Function" from "GlobalScope" line 14":
		<NEWLINE>
[36mtest_file_210923.c[0m - [32mIsAssignation[0m In "Function" from "GlobalScope" line 15":
		<TAB> <LPARENTHESIS> <IDENTIFIER=a> <SPACE> <ASSIGN> <SPACE> <CONSTANT=0> <COMMA> <SPACE> 
[36mtest_file_210923.c[0m - [32mIsFunctionCall[0m In "Function" from "GlobalScope" line 15":
		<IDENTIFIER=printf> <LPARENTHESIS> <STRING="%d\n"> <COMMA> <SPACE> <IDENTIFIER=a> <RPARENTHESIS> <RPARENTHESIS> <SEMI_COLON> <NEWLINE>
[36mtest_file_210923.c[0m - [32mIsExpressionStatement[0m In "Function" from "GlobalScope" line 16":
		<TAB> <RETURN> <SPACE> <LPARENTHESIS> <CONSTANT=0> <RPARENTHESIS> <SEMI_COLON> <NEWLINE>
[36mtest_file_210923.c[0m - [32mIsBlockEnd[0m In "Function" from "GlobalScope" line 17":
		<RBRACE> <NEWLINE>
[36mtest_file_210923.c[0m - [32mIsEmptyLine[0m In "GlobalScope" from "None" line 18":
		<NEWLINE>
[36mtest_file_210923.c[0m - [32mIsFuncDeclaration[0m In "GlobalScope" from "None" line 19":
		<INT> <TAB> <IDENTIFIER=v> <LPARENTHESIS> <INT> <SPACE> <MULT> <RESTRICT> <SPACE> <IDENTIFIER=t> <RPARENTHESIS> <NEWLINE>
[36mtest_file_210923.c[0m - [32mIsBlockStart[0m In "Function" from "GlobalScope" line 20":
		<LBRACE> <NEWLINE>
[36mtest_file_210923.c[0m - [32mIsVarDeclaration[0m In "Function" from "GlobalScope" line 21":
		<TAB> <CONST> <SPACE> <CHAR> <TAB> <MULT> <RESTRICT> <SPACE> <IDENTIFIER=s> <SPACE> <ASSIGN> <SPACE> <STRING="Hello World"> <SEMI_COLON> <NEWLINE>
[36mtest_file_210923.c[0m - [32mIsEmptyLine[0m In "Function" from "GlobalScope" line 22":
		<NEWLINE>
[36mtest_file_210923.c[0m - [32mIsFunctionCall[0m In "Function" from "GlobalScope" line 23":
		<TAB> <IDENTIFIER=printf> <LPARENTHESIS> <STRING="%s\n"> <COMMA> <SPACE> <IDENTIFIER=s> <RPARENTHESIS> <COMMA> <SPACE> 
[36mtest_file_210923.c[0m - [32mIsAssignation[0m In "Function" from "GlobalScope" line 23":
		<IDENTIFIER=a> <SPACE> <ASSIGN> <SPACE> <CONSTANT=15> <SEMI_COLON> <NEWLINE>
[36mtest_file_210923.c[0m - [32mIsExpressionStatement[0m In "Function" from "GlobalScope" line 24":
		<TAB> <RETURN> <SPACE> <LPARENTHESIS> <CONSTANT=0> <RPARENTHESIS> <SEMI_COLON> <NEWLINE>
[36mtest_file_210923.c[0m - [32mIsBlockEnd[0m In "Function" from "GlobalScope" line 25":
		<RBRACE> <NEWLINE>
[36mtest_file_210923.c[0m - [32mIsEmptyLine[0m In "GlobalScope" from "None" line 26":
		<NEWLINE>
[36mtest_file_210923.c[0m - [32mIsFuncDeclaration[0m In "GlobalScope" from "None" line 27":
		<INT> <TAB> <IDENTIFIER=main> <LPARENTHESIS> <VOID> <RPARENTHESIS> <NEWLINE>
[36mtest_file_210923.c[0m - [32mIsBlockStart[0m In "Function" from "GlobalScope" line 28":
		<LBRACE> <NEWLINE>
[36mtest_file_210923.c[0m - [32mIsVarDeclaration[0m In "Function" from "GlobalScope" line 29":
		<TAB> <INT> <TAB> <IDENTIFIER=a> <SEMI_COLON> <NEWLINE>
[36mtest_file_210923.c[0m - [32mIsEmptyLine[0m In "Function" from "GlobalScope" line 30":
		<NEWLINE>
[36mtest_file_210923.c[0m - [32mIsAssignation[0m In "Function" from "GlobalScope" line 31":
		<TAB> <IDENTIFIER=a> <SPACE> <ASSIGN> <SPACE> <CONSTANT=0> <COMMA> <SPACE> 
[36mtest_file_210923.c[0m - [32mIsFunctionCall[0m In "Function" from "GlobalScope" line 31":
		<IDENTIFIER=printf> <LPARENTHESIS> <STRING="%d\n"> <COMMA> <SPACE> <IDENTIFIER=a> <RPARENTHESIS> <SEMI_COLON> <NEWLINE>
[36mtest_file_210923.c[0m - [32mIsExpressionStatement[0m In "Function" from "GlobalScope" line 32":
		<TAB> <RETURN> <SPACE> <LPARENTHESIS> <CONSTANT=0> <RPARENTHESIS> <SEMI_COLON> <NEWLINE>
[36mtest_file_210923.c[0m - [32mIsBlockEnd[0m In "Function" from "GlobalScope" line 33":
		<RBRACE> <NEWLINE>
[36mtest_file_210923.c[0m - [32mIsEmptyLine[0m In "GlobalScope" from "None" line 34":
		<NEWLINE>
[36mtest_file_210923.c[0m - [32mIsFuncDeclaration[0m In "GlobalScope" from "None" line 35":
		<INT> <TAB> <IDENTIFIER=main> <LPARENTHESIS> <VOID> <RPARENTHESIS> <NEWLINE>
[36mtest_file_210923.c[0m - [32mIsBlockStart[0m In "Function" from "GlobalScope" line 36":
		<LBRACE> <NEWLINE>
[36mtest_file_210923.c[0m - [32mIsAssignation[0m In "Function" from "GlobalScope" line 37":
		<TAB> <IDENTIFIER=a> <SPACE> <ASSIGN> <SPACE> <LPARENTHESIS> <IDENTIFIER=FLOAT> <RPARENTHESIS> <MINUS> <CONSTANT=0.5f> <SEMI_COLON> <NEWLINE>
[36mtest_file_210923.c[0m - [32mIsAssignation[0m In "Function" from "GlobalScope" line 38":
		<TAB> <IDENTIFIER=a> <SPACE> <ASSIGN> <SPACE> <LPARENTHESIS> <IDENTIFIER=FLOAT> <RPARENTHESIS> <PLUS> <CONSTANT=0.5f> <SEMI_COLON> <NEWLINE>
[36mtest_file_210923.c[0m - [32mIsAssignation[0m In "Function" from "GlobalScope" line 39":
		<TAB> <IDENTIFIER=a> <SPACE> <ASSIGN> <SPACE> <LPARENTHESIS> <IDENTIFIER=FLOAT> <RPARENTHESIS> <CONSTANT=0.5f> <SEMI_COLON> <NEWLINE>
[36mtest_file_210923.c[0m - [32mIsAssignation[0m In "Function" from "GlobalScope" line 40":
		<TAB> <IDENTIFIER=a> <SPACE> <ASSIGN> <SPACE> <LPARENTHESIS> <FLOAT> <RPARENTHESIS> <MINUS> <CONSTANT=0.5f> <SEMI_COLON> <NEWLINE>
[36mtest_file_210923.c[0m - [32mIsAssignation[0m In "Function" from "GlobalScope" line 41":
		<TAB> <IDENTIFIER=a> <SPACE> <ASSIGN> <SPACE> <LPARENTHESIS> <FLOAT> <RPARENTHESIS> <PLUS> <CONSTANT=0.5f> <SEMI_COLON> <NEWLINE>
[36mtest_file_210923.c[0m - [32mIsAssignation[0m In "Function" from "GlobalScope" line 42":
		<TAB> <IDENTIFIER=a> <SPACE> <ASSIGN> <SPACE> <LPARENTHESIS> <FLOAT> <RPARENTHESIS> <CONSTANT=0.5f> <SEMI_COLON> <NEWLINE>
[36mtest_file_210923.c[0m - [32mIsAssignation[0m In "Function" from "GlobalScope" line 43":
		<TAB> <IDENTIFIER=a> <SPACE> <ASSIGN> <SPACE> <LPARENTHESIS> <IDENTIFIER=FLOAT> <RPARENTHESIS> <IDENTIFIER=a> <SEMI_COLON> <NEWLINE>
[36mtest_file_210923.c[0m - [32mIsAssignation[0m In "Function" from "GlobalScope" line 44":
		<TAB> <IDENTIFIER=a> <SPACE> <ASSIGN> <SPACE> <LPARENTHESIS> <FLOAT> <RPARENTHESIS> <IDENTIFIER=a> <SEMI_COLON> <NEWLINE>
[36mtest_file_210923.c[0m - [32mIsBlockEnd[0m In "Function" from "GlobalScope" line 45":
		<RBRACE> <NEWLINE>
[36mtest_file_210923.c[0m - [32mIsEmptyLine[0m In "GlobalScope" from "None" line 46":
		<NEWLINE>
[36mtest_file_210923.c[0m - [32mIsFuncDeclaration[0m In "GlobalScope" from "None" line 47":
		<IDENTIFIER=__attribute__> <LPARENTHESIS> <LPARENTHESIS> <IDENTIFIER=warn_unused_result> <RPARENTHESIS> <RPARENTHESIS> <SPACE> <INT> <TAB> <IDENTIFIER=main> <LPARENTHESIS> <INT> <SPACE> <IDENTIFIER=argc> <COMMA> <SPACE> <CHAR> <SPACE> <MULT> <MULT> <IDENTIFIER=argv> <RPARENTHESIS> <NEWLINE>
[36mtest_file_210923.c[0m - [32mIsBlockStart[0m In "Function" from "GlobalScope" line 48":
		<LBRACE> <NEWLINE>
[36mtest_file_210923.c[0m - [32mIsFunctionCall[0m In "Function" from "GlobalScope" line 49":
		<TAB> <IDENTIFIER=printf> <LPARENTHESIS> <STRING="Hello, world!\n"> <RPARENTHESIS> <SEMI_COLON> <NEWLINE>
[36mtest_file_210923.c[0m - [32mIsBlockEnd[0m In "Function" from "GlobalScope" line 50":
		<RBRACE> <NEWLINE>
[36mtest_file_210923.c[0m - [32mIsEmptyLine[0m In "GlobalScope" from "None" line 51":
		<NEWLINE>
[36mtest_file_210923.c[0m - [32mIsFuncPrototype[0m In "GlobalScope" from "None" line 52":
		<VOID> <TAB> <MULT> <IDENTIFIER=xmalloc> <LPARENTHESIS> <IDENTIFIER=size_t> <SPACE> <IDENTIFIER=size> <RPARENTHESIS> <SPACE> <IDENTIFIER=__attribute__> <LPARENTHESIS> <LPARENTHESIS> <IDENTIFIER=malloc> <RPARENTHESIS> <RPARENTHESIS> <SPACE> <IDENTIFIER=__attribute__> <LPARENTHESIS> <LPARENTHESIS> <IDENTIFIER=warn_unused_result> <RPARENTHESIS> <RPARENTHESIS> <SEMI_COLON> <NEWLINE>
[36mtest_file_210923.c[0m - [32mIsEmptyLine[0m In "GlobalScope" from "None" line 53":
		<NEWLINE>
[36mtest_file_210923.c[0m - [32mIsFuncDeclaration[0m In "GlobalScope" from "None" line 54":
		<INT> <TAB> <IDENTIFIER=main> <LPARENTHESIS> <VOID> <RPARENTHESIS> <NEWLINE>
[36mtest_file_210923.c[0m - [32mIsBlockStart[0m In "Function" from "GlobalScope" line 55":
		<LBRACE> <NEWLINE>
[36mtest_file_210923.c[0m - [32mIsAssignation[0m In "Function" from "GlobalScope" line 56":
		<TAB> <IDENTIFIER=a> <SPACE> <ASSIGN> <SPACE> <LPARENTHESIS> <LBRACE> <CONSTANT=4> <SEMI_COLON> <RBRACE> <RPARENTHESIS> <SEMI_COLON> <NEWLINE>
[36mtest_file_210923.c[0m - [32mIsBlockEnd[0m In "Function" from "GlobalScope" line 57":
		<RBRACE> <NEWLINE>
[36mtest_file_210923.c[0m - [32mIsEmptyLine[0m In "GlobalScope" from "None" line 58":
		<NEWLINE>
[36mtest_file_210923.c[0m - [32mIsFuncDeclaration[0m In "GlobalScope" from "None" line 59":
		<VOID> <TAB> <IDENTIFIER=draw_player> <LPARENTHESIS> <IDENTIFIER=t_env> <SPACE> <MULT> <IDENTIFIER=env> <RPARENTHESIS> <NEWLINE>
[36mtest_file_210923.c[0m - [32mIsBlockStart[0m In "Function" from "GlobalScope" line 60":
		<LBRACE> <NEWLINE>
[36mtest_file_210923.c[0m - [32mIsAssignation[0m In "Function" from "GlobalScope" line 61":
		<TAB> <IDENTIFIER=env> <PTR> <IDENTIFIER=p> <PTR> <IDENTIFIER=f_x> <SPACE> <ADD_ASSIGN> <SPACE> <LPARENTHESIS> <IDENTIFIER=env> <PTR> <IDENTIFIER=p> <PTR> <IDENTIFIER=x> <SPACE> <MINUS> <SPACE> <IDENTIFIER=env> <PTR> <IDENTIFIER=p> <PTR> <IDENTIFIER=f_x> <RPARENTHESIS> <SPACE> <MULT> <SPACE> <CONSTANT=0.5> <SEMI_COLON> <NEWLINE>
[36mtest_file_210923.c[0m - [32mIsAssignation[0m In "Function" from "GlobalScope" line 62":
		<TAB> <IDENTIFIER=env> <PTR> <IDENTIFIER=p> <PTR> <IDENTIFIER=f_y> <SPACE> <ADD_ASSIGN> <SPACE> <LPARENTHESIS> <IDENTIFIER=env> <PTR> <IDENTIFIER=p> <PTR> <IDENTIFIER=y> <SPACE> <MINUS> <SPACE> <IDENTIFIER=env> <PTR> <IDENTIFIER=p> <PTR> <IDENTIFIER=f_y> <RPARENTHESIS> <SPACE> <MULT> <SPACE> <CONSTANT=0.5> <SEMI_COLON> <NEWLINE>
[36mtest_file_210923.c[0m - [32mIsFunctionCall[0m In "Function" from "GlobalScope" line 63":
		<TAB> <IDENTIFIER=draw_on_image> <LPARENTHESIS> <IDENTIFIER=env> <PTR> <IDENTIFIER=main_img> <COMMA> <SPACE> <IDENTIFIER=env> <PTR> <IDENTIFIER=p> <PTR> <IDENTIFIER=img> <COMMA> <SPACE> <LPARENTHESIS> <LPARENTHESIS> <INT> <RPARENTHESIS> <LPARENTHESIS> <IDENTIFIER=env> <PTR> <IDENTIFIER=p> <PTR> <IDENTIFIER=f_y> <RPARENTHESIS> <SPACE> <MULT> <SPACE> <CONSTANT=64> <RPARENTHESIS> <COMMA> <SPACE> <LPARENTHESIS> <LPARENTHESIS> <INT> <RPARENTHESIS> <LPARENTHESIS> <IDENTIFIER=env> <PTR> <IDENTIFIER=p> <PTR> <IDENTIFIER=f_x> <RPARENTHESIS> <SPACE> <MULT> <SPACE> <CONSTANT=64> <RPARENTHESIS> <RPARENTHESIS> <SEMI_COLON> <NEWLINE>
[36mtest_file_210923.c[0m - [32mIsBlockEnd[0m In "Function" from "GlobalScope" line 64":
		<RBRACE> <NEWLINE>
test_file_210923.c: Error!
Error: MULT_ASSIGN_LINE     (line:   6, col:  16):	Multiple assignations on a single line
Error: TOO_FEW_TAB          (line:   6, col:  16):	Missing tabs for indent level
Error: TOO_MANY_INSTR       (line:   6, col:  16):	Too many instructions on a single line
Error: INCLUDE_START_FILE   (line:   9, col:   1):	Include must be at the start of file
Error: TOO_FEW_TAB          (line:  15, col:  13):	Missing tabs for indent level
Error: TOO_MANY_INSTR       (line:  15, col:  13):	Too many instructions on a single line
Error: TOO_FEW_TAB          (line:  23, col:  23):	Missing tabs for indent level
Error: TOO_MANY_INSTR       (line:  23, col:  23):	Too many instructions on a single line
Error: TOO_FEW_TAB          (line:  31, col:  12):	Missing tabs for indent level
Error: TOO_MANY_INSTR       (line:  31, col:  12):	Too many instructions on a single line
Error: ATTR_EOL             (line:  47, col:   1):	Function attribute must be at the end of line
Error: TOO_MANY_FUNCS       (line:  47, col:   1):	Too many functions in file
Error: LINE_TOO_LONG        (line:  52, col:  88):	line too long
Error: TOO_MANY_FUNCS       (line:  54, col:   1):	Too many functions in file
Error: TOO_MANY_FUNCS       (line:  59, col:   1):	Too many functions in file
Error: LINE_TOO_LONG        (line:  63, col:  84):	line too long
